--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
     <version>11</version>
   </parent>
 
-  <name>Solr Indexer</name>
-  <description>Hippo Forge - Solr Indexer</description>
+  <name>Hippo Solr indexer</name>
+  <description>For regularly indexing Hippo CMS content into Solr </description>
   <groupId>org.onehippo.forge.solr.indexer</groupId>
   <artifactId>solr-indexer</artifactId>
   <version>0.01.00-SNAPSHOT</version>
