--- a/addon-repository/pom.xml
+++ b/addon-repository/pom.xml
@@ -20,12 +20,12 @@
   <parent>
     <groupId>org.onehippo.forge.solr.indexer</groupId>
     <artifactId>solr-indexer</artifactId>
-    <version>0.01.00</version>
+    <version>0.01.01-SNAPSHOT</version>
   </parent>
 
   <name>Hippo Solr indexer - Addon Repository</name>
   <groupId>org.onehippo.forge.solr.indexer</groupId>
   <artifactId>solr-indexer-addon-repository</artifactId>
-  <version>0.01.00</version>
+  <version>0.01.01-SNAPSHOT</version>
 
 </project>
